# TrackingLibrary

./: .gitignore  CMakeLists.txt  README.md  config.yaml
examples/: tracker_example.cpp
include/: FilterFactory.h  KalmanFilter.h  NoFilter.h  OptimizedKalmanFilter.h  coordinates_transformation.h  detection.h  filter.h  homography_transformation.h  motion_estimator.h  tracked_object.h  tracker.h  translation_transformation.h
src/: FilterFactory.cpp  KalmanFilter.cpp  NoFilter.cpp  OptimizedKalmanFilter.cpp  detection.cpp  main.cpp  motion_estimator.cpp  tracked_object.cpp  tracker.cpp
tests/: test_tracker.cpp
